<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CroperFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_app"
        tools:ignore="UselessParent">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_med_your_selected"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="250dp"
            android:textColor="@color/sec_text_color"/>

        <ImageView
            android:id="@+id/previewMedId"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"/>

        <Button
            android:id="@+id/submetBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/sec_text_color"
            android:backgroundTint="@color/White"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:paddingStart="125dp"
            android:paddingTop="15dp"
            android:paddingEnd="125dp"
            android:paddingBottom="15dp"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</FrameLayout>